--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^1.1.0
+  flutter_launcher_icons: ^0.13.1
+  google_fonts: ^6.1.0
+  provider: ^6.1.1
+  flutter_local_notifications: ^16.1.0
+  rxdart: ^0.27.7
+  persistent_bottom_nav_bar: ^5.0.2
+  buttons_tabbar: ^1.3.8
+  animated_typing: ^0.2.1
+  flutter_animated_loadingkit: ^0.0.7
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +57,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/play_store_512.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
