--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   animated_typing: ^0.2.1
   flutter_animated_loadingkit: ^0.0.7
   flutter_spinkit: ^5.2.0
+  icons_plus: ^4.0.0
+  font_awesome_flutter: ^10.6.0
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
@@ -74,10 +77,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
