--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   icons_plus: ^4.0.0
   font_awesome_flutter: ^10.6.0
   flutter_switch: ^0.3.2
+  flutter_html: ^3.0.0-beta.2
+  webview_flutter: ^4.4.2
+  cached_network_image: ^3.3.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
