--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   webview_flutter: ^4.4.2
   cached_network_image: ^3.3.0
   carousel_slider: ^4.2.1
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
