--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,15 @@ dependencies:
   cached_network_image: ^3.3.0
   carousel_slider: ^4.2.1
   fluttertoast: ^8.2.4
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.14.0
+  firebase_analytics: ^10.7.0
+  firebase_storage: ^11.5.1
+  cloud_firestore: ^4.13.1
+  google_sign_in: ^6.1.6
+  intl: ^0.18.1
+  firebase_helpers: ^0.6.1
+  quickalert: ^1.0.2
 
 dev_dependencies:
   flutter_test:
